index changed to render properly

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,700|Prata" rel="stylesheet">
-    <link rel="shortcut icon" href="../src/assets/favicon.png">
-    <link rel="stylesheet" href="main.css">
-    <script src="bundle.js"></script>
+    <link rel="shortcut icon" href="./src/assets/favicon.png">
+    <link rel="stylesheet" href="./dist/main.css">
+    <script src="./dist/bundle.js"></script>
     
     <title>Slime Guy</title>
 </head>
@@ -21,7 +21,7 @@
                     <p>Created by Joseph Felicidario</p>
                 </li>
                 <li>
-                    <a href="https://github.com/JFlec/Slime-Guy"> <img class = "github" src="../src/assets/GitHub-Mark.png" alt="GitHub Icon"></a>
+                    <a href="https://github.com/JFlec/Slime-Guy"> <img class = "github" src="./src/assets/GitHub-Mark.png" alt="GitHub Icon"></a>
                 </li>
             </ul>
         </div>
