size changes added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
      
     </header>
     <footer>
-        <div>
             <ul class="footerlist">
                 <li>
                     <p>Created by Joseph Felicidario</p>
@@ -24,21 +23,19 @@
                     <a href="https://github.com/JFlec/Slime-Guy"> <img class = "github" src="./src/assets/GitHub-Mark.png" alt="GitHub Icon"></a>
                 </li>
             </ul>
-        </div>
     </footer>
-   
-    <div class="grid">
-        <p class="score">Slime Guy</p>
-        <p class="title">press space to start or pause</p>
-        <p class="movement">A, D or ← → to move</p>
-        <p class="shoot">enter to shoot</p>
-        <p class="oneEnding"></p>
-        <p class="twoEnding"></p>
-        <p class="finalScore"></p>
-    
+   <div class="container">
+        <div class="grid">
+                <p class="score">Slime Guy</p>
+                <p class="title">press space to start or pause</p>
+                <p class="movement">A, D or ← → to move</p>
+                <p class="shoot">enter to shoot</p>
+                <p class="oneEnding"></p>
+                <p class="twoEnding"></p>
+                <p class="finalScore"></p>
+        </div>
     </div>
     <div class="menu">
-
         <ul class="menu-list">
             <li>
                 <label>Music Volume</label>
