--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
 <body>
     <header>
         <img src="./src/assets/question_mark_white.png" alt="question_mark_white" class="popup" onclick="myFunction()">
-        <span class="popuptext" id="myPopup">After committing countless horrendous crimes against humanity, Slime Guy
-            was banished to the deepest darkest depths of Hell. It is up to the player to decide if Slime Guy survives
-            and redeems himself, otherwise Slime Guy more like Slime Die. </span>
+        <span class="popuptext" id="myPopup">After committing countless horrendous crimes against humanity, <slime>Slime
+                Guy</slime>
+            was banished to the deepest darkest depths of <hell>Hell</hell>. It is up to the player to decide if <slime>
+                Slime Guy
+            </slime> survives
+            and redeems himself, otherwise <slime>Slime Guy</slime> more like <slime>Slime</slime>
+            <hell>Die</hell>.
+        </span>
 
     </header>
     <footer>
