file tree cleaned up

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./dist/main.css">
     <link rel="stylesheet" href="./dist/reset.css">
     <link rel="shortcut icon" href="./src/assets/favicon.png">
@@ -26,12 +25,10 @@
         <span class="popuptext" id="myPopup">After committing countless horrendous crimes against humanity, <slime>Slime
                 Guy</slime>
             was banished to the deepest darkest depths of <hell>Hell</hell>. It is up to the player to decide if <slime>
-                Slime Guy
-            </slime> survives
-            and redeems himself, otherwise <slime>Slime Guy</slime> more like <slime>Slime</slime>
+                Slime Guy</slime>
+            survives and redeems himself, otherwise <slime>Slime Guy</slime> more like <slime>Slime</slime>
             <hell>Die</hell>.
         </span>
-
     </header>
 
     <div class="container">
@@ -54,29 +51,20 @@
     </div>
 
     <footer>
-        <ul class="footerlist">
-            <li>
-                <a href="https://github.com/JFlec"> <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/joe-felicidario-3755151b7/">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://angel.co/u/joseph-felicidario">
-                    <i class="fab fa-angellist"></i>
-                </a>
-            </li>
-            <li>
-                <a href="https://jflec.github.io/portfolio/">
-                    <i class="far fa-user"></i>
-                </a>
-            </li>
-        </ul>
+        <div class="footerlist">
+            <a href="https://github.com/JFlec"> <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/joe-felicidario-3755151b7/">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://angel.co/u/joseph-felicidario">
+                <i class="fab fa-angellist"></i>
+            </a>
+            <a href="https://jflec.github.io/portfolio/">
+                <i class="far fa-user"></i>
+            </a>
+        </div>
     </footer>
-
 </body>
 
 </html>
