finishing touches, gameplay balance, responsive changes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 Slime Guy</slime>
             survives and redeems himself, otherwise <slime>Slime Guy</slime> more like <slime>Slime</slime>
             <hell>Die</hell>.
+            <br>
+            <br>
+            Shoot <hell>demons</hell> for 10 points, be careful though, letting one escape loses you 20 points.
         </span>
     </header>
 
