final touches maybe?

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="grid">
             <div class="menu-container">
                 <p class="score">
-                    <slime>Slime Guy</slime>
+                    <hell>Slime Guy</hell>
                 </p>
                 <p class="title">press space to start or pause</p>
                 <p class="movement">A, D or ← → to move</p>
