--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property='og:title' content='Slime Guy' />
+    <meta property='og:image' content='./src/assets/slime_guy_thumbnail.png' />
+    <meta property='og:description' content='Joe Felicidario JavaScript Project' />
+    <meta property='og:url' content='https://jflec.github.io/Slime-Guy/' />
     <link rel="stylesheet" href="./dist/main.css">
     <link rel="stylesheet" href="./dist/reset.css">
     <link rel="shortcut icon" href="./src/assets/favicon.png">
