--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property='og:title' content='Slime Guy' />
     <meta property='og:image' content='./src/assets/slime_guy_thumbnail.png' />
-    <meta property='og:description' content='Joe Felicidario JavaScript Project' />
+    <meta property='og:description' content='Slime Guy throws the user straight into slime action. After committing countless horrendous crimes against humanity,
+Slime Guy was banished to the deepest darkest depths of Hell. It is up to the player to decide if Slime Guy survives and
+redeems himself, otherwise Slime Guy more like Slime Die.' />
     <meta property='og:url' content='https://jflec.github.io/Slime-Guy/' />
     <link rel="stylesheet" href="./dist/main.css">
     <link rel="stylesheet" href="./dist/reset.css">
