okay final please

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@ redeems himself, otherwise Slime Guy more like Slime Die.' />
 <body>
     <header>
         <i class="fas fa-question popup" onclick="myFunction()"></i>
-        <span class="popuptext" id="myPopup">After committing countless horrendous crimes against humanity, <slime>Slime
+        <span class="popuptext" id="myPopup">
+            This app runs best on <i class="fab fa-chrome"></i>.
+            <br>
+            <br>
+            After committing countless horrendous crimes against humanity, <slime>Slime
                 Guy</slime>
             was banished to the deepest darkest depths of <hell>Hell</hell>. It is up to the player to decide if <slime>
                 Slime Guy</slime>
@@ -37,6 +41,16 @@ redeems himself, otherwise Slime Guy more like Slime Die.' />
             <br>
             <br>
             Shoot <hell>demons</hell> for 10 points, be careful though, letting one escape loses you 20 points.
+            <br>
+            <br>
+            This game was built with responsiveness in mind, if you find it to be too difficult or too easy you can
+            adjust
+            the game size.
+            <br>
+            <br>
+            <i class="fab fa-windows"></i> CTRL +/-
+            <br>
+            <i class="fab fa-apple"></i> COMMAND +/-
         </span>
     </header>
 
