--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@ redeems himself, otherwise Slime Guy more like Slime Die.' />
             <br>
             <br>
             This game was built with responsiveness in mind, if you find it to be too difficult or too easy you can
-            adjust
-            the game size.
+            adjust the game size.
+            <br>
+            (The smaller the screen, the harder it is.)
             <br>
             <br>
             <i class="fab fa-windows"></i> CTRL +/-
